discord-bot/src/test/resources/cocos/guild/invalid/SubredditNameIsUnique.gld
configuration 12345L {
    prefix "prefix"
    blacklist "expression"
    subreddit "x" {
        channel : 0L
    }
    subreddit "x" {
        channel : 1L
    }
    selfassignable "c" {
        role : 9L
    }
}
